# pyresolvemetrics

./: Makefile  README.md  pyproject.toml
.github/workflows/: docs.yaml  publish-er-metrics-article.yaml
doc/: 01_article.fls  02_appendix.blg  02_appendix.fls  api_reference.rst  conf.py  index.rst
doc/article/: .gitignore  01_article.aux  01_article.bbl  01_article.blg  01_article.fdb_latexmk  01_article.tex  02_appendix.aux  02_appendix.bbl  02_appendix.fdb_latexmk  02_appendix.out  02_appendix.tex  03_references.bib  Makefile
doc/article/img/performance/: algebraic-flamegraph.xcf  fs-flamegraph.xcf
sample/: sample.py
src/entity_resolution_measurements/: __init__.py  _bmd.py  _gmd.py
src/matchescu/metrics/: algebraic.py  fsm.py  serf.py
src/pyresolvemetrics/: algebraic.py  fsm.py  serf.py
tests/: conftest.py  test_basic_merge_distance.py  test_f1_score.py  test_probabilistic_metrics.py  test_rand_index.py  test_twi.py  test_variation_of_information.py
