[tool.poetry]
name = "er-metrics"
version = "0.2.0"
description = "Entity resolution metrics"
authors = ["Andrei Olar <andrei.olar@dpgmedia.nl>"]
readme = "README.md"
packages = [{include = "matchescu", from="src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
