[tool.poetry]
name = "pyresolvemetrics"
version = "0.2.1"
description = "Entity resolution metrics library"
authors = ["Andrei Olar <andrei.olar@ubbcluj.ro>"]
readme = "README.md"
packages = [{include = "pyresolvemetrics", from="src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
